--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/swagger-ui-dist": "^3.30.5",
     "dotenv": "^16.5.0",
     "next": "15.3.1",
-    "next-swagger-doc": "^0.4.1",
+    "next-swagger-doc": "0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swagger-ui-dist": "^5.21.0",
