chore: add upstash ratelimit

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.7.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@types/swagger-ui-dist": "^3.30.5",
+    "@upstash/ratelimit": "^2.0.5",
     "dotenv": "^16.5.0",
     "next": "15.3.1",
     "next-swagger-doc": "0.4.0",
