--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@t3-oss/env-nextjs": "^0.13.4",
     "@types/swagger-ui-dist": "^3.30.5",
     "@upstash/ratelimit": "^2.0.5",
+    "@vercel/functions": "^2.0.3",
     "dotenv": "^16.5.0",
     "next": "15.3.1",
     "next-swagger-doc": "0.4.0",
